--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-, "app/(admin)/(pages)/(tables)/common-table/page.tsx"  ],
+, "app/(admin)/(pages)/(tables)/dummy-table/page.tsx"  ],
   "exclude": ["node_modules"]
 }
